<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.view.detail.DetailFragment">

    <data>

        <variable
            name="detailProfile"
            type="com.darkshandev.githubuser.data.models.UserDetail" />

        <variable
            name="empty"
            type="String"
            android:value="not provided" />

        <variable
            name="zero"
            type="String"
            android:value="0" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail">

            <TextView
                android:id="@+id/following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{String.valueOf(detailProfile.following),default=`0`}"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/following_label"
                app:layout_constraintStart_toStartOf="@+id/following_label"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/following_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/Following"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/following_count" />

            <View
                android:id="@+id/divider_2"
                android:layout_width="1dp"
                android:layout_height="64dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="@+id/follower_label"
                app:layout_constraintEnd_toStartOf="@+id/following_label"
                app:layout_constraintStart_toEndOf="@+id/follower_label"
                app:layout_constraintTop_toTopOf="@+id/follower_count" />

            <TextView
                android:id="@+id/follower_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{String.valueOf(detailProfile.followers),default=`0`}"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/follower_label"
                app:layout_constraintStart_toStartOf="@+id/follower_label"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/follower_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Follower"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toStartOf="@+id/following_label"
                app:layout_constraintStart_toEndOf="@+id/repositories_label"
                app:layout_constraintTop_toBottomOf="@+id/follower_count" />

            <ImageView
                android:id="@+id/detail_image_profile"
                resname="@{detailProfile.avatar_url}"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/profile_image"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.113"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:text="@{detailProfile.name,default=empty}"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.081"
                app:layout_constraintStart_toEndOf="@+id/detail_image_profile"
                app:layout_constraintTop_toTopOf="@+id/detail_image_profile" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{`(`+detailProfile.login+`)`,default=empty}"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                app:layout_constraintStart_toStartOf="@+id/detail_name"
                app:layout_constraintTop_toBottomOf="@+id/detail_name" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{detailProfile.company??`-`}"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"

                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{detailProfile.location??`-`}"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="@+id/detail_image_profile"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <View
                android:id="@+id/divider_1"
                android:layout_width="1dp"
                android:layout_height="64dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="@+id/repositories_label"
                app:layout_constraintEnd_toStartOf="@+id/follower_label"
                app:layout_constraintStart_toEndOf="@+id/repositories_label"
                app:layout_constraintTop_toTopOf="@+id/repo_count"
                app:layout_constraintVertical_bias="0.444" />

            <TextView
                android:id="@+id/repo_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{String.valueOf(detailProfile.public_repos)}"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/repositories_label"
                app:layout_constraintStart_toStartOf="@+id/repositories_label"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/repositories_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/Repositories"
                android:textColor="@color/primaryColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repo_count" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:contentDescription="@string/tabs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_1" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:contentDescription="@string/submit"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpager_detail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:pointerIcon="arrow"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/detail_menu"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail" />

        <TextView
            android:id="@+id/error_text_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
            tools:text="@string/Repositories" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>